# synth-tui

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  migration_plan.txt
app/: IMPLEMENTATION_PLAN.md  debug_synth_provider.ts  opencode_synth_backend.md  package.dist.json  package.json  quick_test.ts  synth.md  test_opencode_api.ts  test_streaming.ts  test_synth_complete.ts  tsconfig.json  tsconfig.typecheck.json
app/.opencode/: opencode.db-shm  opencode.db-wal
app/scripts/: build-bins.ts  build.ts
app/src/: auth.ts  context.ts  focus.ts  index.ts  login_modal.ts  tui_data.ts  types.ts
app/src/api/: candidates.ts  client.ts  events.ts  identity.ts  index.ts  jobs-stream.ts  jobs-unified.ts  jobs.ts  opencode.ts  sessions.ts  traces.ts  tunnels.ts
app/src/components/: error-box.ts  index.ts  key-hint.ts  layout.ts
app/src/data/: synth-docs.md
app/src/formatters/: ascii_chart.ts  events.ts  index.ts  job-details.ts  metrics.ts  results.ts  time.ts
app/src/handlers/: index.ts  keyboard.ts
app/src/lifecycle/: index.ts  shutdown.ts
app/src/modals/: base.ts  config-modal.ts  create-job-modal.ts  event-modal.ts  filter-modal.ts  index.ts  job-filter-modal.ts  key-modal.ts  log-file-modal.ts  profile-modal.ts  sessions-modal.ts  (+5 more)
app/tests/: solid_migration.test.ts  tui_data.test.ts
opencode_config/: opencode.jsonc
python/synth_tui/: __init__.py  deploy.py  eval_job.py  launcher.py
reference/: MIGRATION_DIFFERENCES.md
scripts/: bazel_app_tests.sh  release.sh
tests/: __init__.py  conftest.py  test_opencode_integration.py  test_streaming.py
(+69 files in other folders)
